--- a/blog/config.yaml
+++ b/blog/config.yaml
@@ -6,7 +6,7 @@ title: "Life With Alacrity"
 permalinks:
   post: /:year/:month/:title/
 
-
 params:
   description: "A blog on social software, collaboration, trust, security, privacy, and internet tools, by Christopher Allen."
   author: "Christopher Allen"
+  name: "Life With Alacrity"
