--- a/blog/config.yaml
+++ b/blog/config.yaml
@@ -9,6 +9,6 @@ permalinks:
 publishdir: "../../lifewithalacrity.github.io"
 
 params:
-  description: "A blog on social software, collaboration, trust, security, privacy, and internet tools, by Christopher Allen."
-  author: "Christopher Allen"
   name: "Life With Alacrity"
+  summary: "A blog on social software, collaboration, trust, security, privacy, and internet tools"
+  author: "Christopher Allen"
