mung the fb script to only be one deep
because scripts that write scripts confuse markdown

--- a/blog/config.yaml
+++ b/blog/config.yaml
@@ -15,3 +15,6 @@ params:
   name: "Life With Alacrity"
   summary: "A blog on social software, collaboration, trust, security, privacy, and internet tools"
   author: "Christopher Allen"
+
+blackfriday:
+  smartypants: false
