summaries and sup
make homepage summaries a tad bigger, make footnotes with sup look more
like the tufte sidetones and not mess with line spacing.

--- a/blog/config.yaml
+++ b/blog/config.yaml
@@ -2,6 +2,7 @@
 baseurl: "https://lifewithalacrity.github.io/"
 languageCode: "en-us"
 title: "Life With Alacrity"
+theme: indie-tufte
 
 permalinks:
   post: /:year/:month/:title/
