--- a/blog/config.yaml
+++ b/blog/config.yaml
@@ -17,4 +17,5 @@ params:
   summary: "A blog on social software, collaboration, trust, security, privacy, and internet tools"
   author: "Christopher Allen"
   authorurl: "/about"
+  authorphoto: "/images/christophera.jpg"
 
