change baseurl to reflect permalink

--- a/blog/config.yaml
+++ b/blog/config.yaml
@@ -1,5 +1,5 @@
 ---
-baseurl: "https://lifewithalacrity.github.io/"
+baseurl: "http://www.lifewithalacrity.com/"
 languageCode: "en-us"
 title: "Life With Alacrity"
 theme: indie-tufte
